[tool.poetry]
name = "lakehouse"
version = "0.1.0"
description = ""
authors = ["Kun <1amb4a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.5.0"
dbt-trino = "^1.5.0"
trino = "^0.326.0"
urllib3 = "^1.26.16"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
apache-airflow = "2.7.0"
git-changelog = "^2.2.0"
sqlfluff = "^2.3.1"
sqlfluff-templater-dbt = "^2.3.1"
ruff = "^0.0.287"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
